--- a/app/routes/_app/_app.module.css
+++ b/app/routes/_app/_app.module.css
@@ -6,6 +6,7 @@
 
 .sidebar {
   position: fixed;
+  z-index: 10;
   height: 100%;
   width: 300px;
   padding: 20px;
